--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="build/styles.css">
   <title>Free Code Camp Leaderboard</title>
 </head>
 <body>
   <h1>FCC Leaderboard</h1>
-
+  <div id="app"></div>
   <script src="build/bundle.js"></script>
 </body>
 </html>
