--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Muli:300,400" rel="stylesheet" type="text/css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.1.1/normalize.min.css" rel="stylesheet" type="text/css">
-  <title>Free Code Camp Leaderboard</title>
+  <title>Free Code Camp Top 100</title>
   <style>
     .repo-link {
       display: none;
